worked on instructions within the experiment

--- a/bertrand/templates/bertrand/Decide.html
+++ b/bertrand/templates/bertrand/Decide.html
@@ -7,43 +7,49 @@
 
 {% block content %}
 <div class="container">
-  <div class="row">
+	<div class="row">
 		<div class="col-sm">
-		<b>
-		{% formfield player.price label=label_decide %}
-		</b>
-		<br>
-	<p>{% next_button %}</p>
-    </div>
-    <div class="col-sm">
-          <div id="calculator">
-            <!-- Screen and clear key -->
-            <div class="top">
-                <span class="clear">C</span>
-                <div class="screen"></div>
-            </div>
-            
-            <div class="keys">
-                <!-- operators and other keys -->
-                <span>7</span>
-                <span>8</span>
-                <span>9</span>
-                <span class="operator">+</span>
-                <span>4</span>
-                <span>5</span>
-                <span>6</span>
-                <span class="operator">-</span>
-                <span>1</span>
-                <span>2</span>
-                <span>3</span>
-                <span class="operator">÷</span>
-                <span>0</span>
-                <span>.</span>
-                <span class="eval">=</span>
-                <span class="operator">x</span>
-            </div>
-    </div>
-  </div>
+			<b>
+			{% formfield player.price label=label_decide %}
+			</b>
+			<br>
+		<p>{% next_button %}</p>
+		</div>
+		<div class="col-sm">
+			<div id="calculator">
+				<!-- Screen and clear key -->
+				<div class="top">
+					<span class="clear">C</span>
+					<div class="screen"></div>
+				</div>
+				
+				<div class="keys">
+					<!-- operators and other keys -->
+					<span>7</span>
+					<span>8</span>
+					<span>9</span>
+					<span class="operator">+</span>
+					<span>4</span>
+					<span>5</span>
+					<span>6</span>
+					<span class="operator">-</span>
+					<span>1</span>
+					<span>2</span>
+					<span>3</span>
+					<span class="operator">÷</span>
+					<span>0</span>
+					<span>.</span>
+					<span class="eval">=</span>
+					<span class="operator">x</span>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col">
+			{% include "bertrand/instructions.html" %}
+		</div>
+	</div>
 </div>
 
   
@@ -51,7 +57,6 @@
 </div>
 
 
-{% include "bertrand/instructions.html" %}
 
 
 {% endblock %}
@@ -84,20 +89,6 @@
 
 
 <script>
-// Timeout for the page 
-setTimeout(
-    function () {
-    document.getElementById('alarm_sound').play();
-    alert("Bitte treffen Sie jetzt Ihre Entscheidung!");
-    },
-    60*1000 // *1000 due to miliseconds
-);
-
-function playSound() {
-	
-  const audio = new Audio();
-  audio.play();
-}
 
 
 // Calculator
