worked on template

--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -1,4 +1,4 @@
-{% extends "global/Page.html" %}
+{% extends "bertrand/BertrandPage.html" %}
 {% load otree %}
 
 {% block title %}Ende des {{super_game_count}}. Durchgangs {% endblock %}
@@ -34,7 +34,6 @@
 
     {% next_button %}
 
-{% include "bertrand/instructions.html" %}
 
 
 {% endblock %}
