--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -1,4 +1,4 @@
-{% extends "global/Page.html" %}
+{% extends "bertrand/BertrandPage.html" %}
 {% load otree %}
 
 {% block title %}
@@ -35,6 +35,5 @@
 
     {% next_button %}
 
-{% include "bertrand/instructions.html" %}
 
 {% endblock %}
