--- a/bertrand/templates/bertrand/StartExperiment.html
+++ b/bertrand/templates/bertrand/StartExperiment.html
@@ -1,4 +1,4 @@
-{% extends "global/Page.html" %}
+{% extends "bertrand/BertrandPage.html" %}
 {% load otree %}
 
 {% block title %}{% endblock %}
@@ -53,7 +53,6 @@
 
     </center>
 
-{% include "bertrand/instructions.html" %}
 
 {% endblock %}
 
