started adding inital instructions

--- a/bertrand/templates/bertrand/BertrandPage.html
+++ b/bertrand/templates/bertrand/BertrandPage.html
@@ -35,7 +35,7 @@ i removed many linebreaks to make output HTML cleaner
                         {% block content %}{% endblock %}
    	                <div class="row">
                         <div class="col">
-                            {% include "bertrand/instructions.html" %}
+                            {% include "bertrand/instructions_joint.html" %}
                         </div>
                     </div>
             </div>
