--- a/introduction/templates/introduction/Quiz.html
+++ b/introduction/templates/introduction/Quiz.html
@@ -8,7 +8,7 @@
 <b>Wir starten zuerst mit einigen Verständnisfragen zu den soeben gelesenen Instruktionen, bevor es mit dem eigentlichen Experiment weitergeht. </b>
 <br><br>
 <div class="row">
-  <div class="column-left"> 
+  <div class="col"> 
  
   	{% formfield player.q_how_many_customer %}
   	{% formfield player.q_after_fixed_round %}
@@ -27,7 +27,7 @@
         {% next_button %}
   
   </div>
-  <div class="column-right">
+  <div class="col">
           <div id="calculator">
             <!-- Screen and clear key -->
             <div class="top">
@@ -55,7 +55,6 @@
                 <span class="operator">x</span>
             </div>
         </div>
-
   
   </div>
 </div>
