--- a/introduction/templates/introduction/Quiz.html
+++ b/introduction/templates/introduction/Quiz.html
@@ -1,4 +1,4 @@
-{% extends "global/Page.html" %}
+{% extends "introduction/Page.html" %}
 {% load otree %}
 
 {% block title %}Bitte beantworten die unten aufgeführten Verständnisfragen{% endblock %}
