--- a/introduction/templates/introduction/Introduction_1_Welcome.html
+++ b/introduction/templates/introduction/Introduction_1_Welcome.html
@@ -1,4 +1,4 @@
-{% extends "global/Page.html" %}
+{% extends "introduction/Page.html" %}
 {% load otree %}
 
 {% block title %}Herzlich Willkommen{% endblock %}
