added correct survey/quiz and reworked things including the payment page

--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -7,8 +7,7 @@
 
 
     Der Zufallsmechanismus hat entschieden, dass dies die letzte Runde des {{super_game_count}}. Durchgangs war. 
-    Sie haben im {{super_game_count}}. Durchgang insgesamt einen Gewinn von <b>{{accumulated_profit}} Talern </b> erzielt. <br>
-    <br><br>
+    Sie haben im {{super_game_count}}. Durchgang insgesamt einen Gewinn von <b>{{accumulated_profit}} </b> erzielt. <br>
     <br><br>
 
     {% if super_game_count != 3 %}
