--- a/bertrand/templates/bertrand/RoundResults.html
+++ b/bertrand/templates/bertrand/RoundResults.html
@@ -29,7 +29,7 @@
             {% endfor %}
         </tr>
     </table>
-    Ihr Preis in dieser Runde betrug {{ player.price }} Taler. Der Marktpreis betrug {{ group.winning_price }} Taler. Sie erhalten in dieser Runde einen Gewinn von {{player.profit}} Taler. 
+    Ihr Preis in dieser Runde betrug {{ player.price }}. Der Marktpreis betrug {{ group.winning_price }}. Sie erhalten in dieser Runde einen Gewinn von {{player.profit}}. 
 
     <br><br>
 
