--- a/bertrand/templates/bertrand/StartExperiment.html
+++ b/bertrand/templates/bertrand/StartExperiment.html
@@ -17,7 +17,6 @@
     Ihre Mitspieler werden sich innerhalb dieses Durchgangs nicht ändern. 
     {% if algo_treatment %}
     <br><br>
-        <u>
         {% if group_treatment == '1H1A' %}
         Firma B wird
         {% elif group_treatment == '1H2A' %}
@@ -25,7 +24,7 @@
         {% elif group_treatment == '2H1A' %}
         Firma C wird
         {% endif %}
-        in jeder Runde dieses Durchgangs mit einem Algorithmus ausgestattet sein</u>, welcher die 
+        in jeder Runde dieses Durchgangs mit einem Algorithmus ausgestattet sein, welcher die 
         erforderlichen Preisentscheidungen für den 
         {% if group_treatment == '1H2A' %}
         jeweiligen Teilnehmer oder die jeweilige Teilnehmerin übernimmt.
