--- a/payment/templates/payment/DropOut.html
+++ b/payment/templates/payment/DropOut.html
@@ -2,10 +2,16 @@
 {% load otree %}
 
 {% block title %}
-Du warst zu langsam
+Sie wurden aus dem Experiment ausgeschlossen
 {% endblock %}
 
 {% block content %}
-TODO
+<p>
+    Sie haben das Zeitlimit für Ihre Entscheidung deutlich überschritten und wurden deswegen aus dem Experiment ausgeschlossen.
+</p>
+<p>
+Sollten Sie hierzu Fragen melden Sie sich bitte beim Administrator im Webex-Chat oder schreiben Sie eine E-Mail an 
+werner@dice.hhu.de
+</p>
 {% endblock %}
 
