added tests for bertrand game

--- a/bertrand/templates/bertrand/EndSG.html
+++ b/bertrand/templates/bertrand/EndSG.html
@@ -7,7 +7,7 @@
 
 
     Der Zufallsmechanismus hat entschieden, dass dies die letzte Runde des {{super_game_count}}. Durchgangs war. 
-    Sie haben im {{super_game_count}}. Durchgang insgesamt einen Gewinn von <b>{{accumulated_profit}} </b> erzielt. <br>
+    Sie haben im {{super_game_count}}. Durchgang insgesamt einen Gewinn von <b>{{accumulated_profit}} Talern </b> erzielt. <br>
     <br><br>
 
     {% if super_game_count != 3 %}
@@ -16,7 +16,7 @@
         <b>Sie spielen jetzt vom gleichen Spiel einen neuen Durchgang.</b> Es besteht wieder eine Wahrscheinlichkeit von 95%, dass nach jeder Runde eine weitere Runde gespielt wird.
         <br><br>
 
-        <b>WICHTIG:</b> Beachten Sie, dass Sie im folgenden Spiel mit anderen Experimentteilnehmern als zuvor in einem
+        <b>WICHTIG:</b> Beachten Sie, dass Sie im folgenden Spiel mit anderen Experimentteilnehmer:innen als zuvor in einem
         Markt sein werden. 
         
         {% if super_game_count == 2 %}
