--- a/bertrand/templates/bertrand/examples_2_firms.html
+++ b/bertrand/templates/bertrand/examples_2_firms.html
@@ -2,7 +2,7 @@
 <p>
 <h3> Beispiele </h3>
 <b>Beispiel 1:</b>
-Firma A setzt einen Preis von 3 Firma B setzt einen Preis von 3.
+Firma A setzt einen Preis von 3 Taler Firma B setzt einen Preis von 3 Taler.
 Somit haben Firma A und B gemeinsam den niedrigsten Preis gesetzt.
 Sie verkaufen beide die gleiche Anzahl an Produkten (jeweils 30) und bekommen damit den gleichen Gewinn von 90 Talern.<br><br>
     <table class="table">
@@ -26,10 +26,10 @@ Sie verkaufen beide die gleiche Anzahl an Produkten (jeweils 30) und bekommen da
     </table>
 <br><br>
 <b>Beispiel 2:</b>
-Firma A setzt einen Preis von 1, Firma B setzt einen Preis von 2.
+Firma A setzt einen Preis von 1 Taler, Firma B setzt einen Preis von 2 Taler.
 Somit hat Firma A den niedrigsten Preis gesetzt.
-Firma A verkauft als einzige das Produkt zu einem Preis von 1 an alle 60 Kunden und bekommt damit einen Gewinn von 60 Talern.
-Firma B verkauft nichts und hat einen Gewinn von 0.<br><br>
+Firma A verkauft als einzige das Produkt zu einem Preis von 1 Taler an alle 60 Kunden und bekommt damit einen Gewinn von 60 Talern.
+Firma B verkauft nichts und hat einen Gewinn von 0 Talern.<br><br>
     <table class="table">
         <tr align="center">
             <th align="center">  </th>
@@ -51,10 +51,10 @@ Firma B verkauft nichts und hat einen Gewinn von 0.<br><br>
     </table>
 <br><br>
 <b>Beispiel 3:</b>
-Firma A setzt einen Preis von 5, Firma B setzt einen Preis von 5.
+Firma A setzt einen Preis von 5 Taler, Firma B setzt einen Preis von 5 Taler.
 Somit haben Firma A und B gemeinsam den niedrigsten Preis gesetzt.
 Die Kunden sind jedoch lediglich bereit das Produkt zu einem Preis von 4 Talern zu kaufen.
-Daher verkauft keine Firma ihre Produkte und alle Firmen bekommen einen Gewinn von 0.<br><br>
+Daher verkauft keine Firma ihre Produkte und alle Firmen bekommen einen Gewinn von 0 Taler.<br><br>
     <table class="table">
         <tr align="center">
             <th align="center">  </th>
