--- a/bertrand/templates/bertrand/examples_3_firms.html
+++ b/bertrand/templates/bertrand/examples_3_firms.html
@@ -2,10 +2,10 @@
 
 <h3> Beispiele </h3>
 <b>Beispiel 1:</b>
-Firma A setzt einen Preis von 3, Firma B setzt einen Preis von 3, Firma C setzt einen Preis von 4.
+Firma A setzt einen Preis von 3 Taler, Firma B setzt einen Preis von 3 Taler, Firma C setzt einen Preis von 4 Taler.
 Somit haben Firma A und B gemeinsam den niedrigsten Preis gesetzt.
 Firma A und B verkaufen beide die gleiche Anzahl an Produkten, beide Firmen haben jeweils 30 Kunden und bekommen damit den gleichen Gewinn von 90 Talern.
-Firma C verkauft nichts und hat einen Gewinn von 0.<br><br>
+Firma C verkauft nichts und hat einen Gewinn von 0 Taler.<br><br>
     <table class="table">
         <tr align="center">
             <th align="center">  </th>
@@ -30,8 +30,8 @@ Firma C verkauft nichts und hat einen Gewinn von 0.<br><br>
     </table>
 <br><br>
 <b>Beispiel 2:</b>
-Firma A setzt einen Preis von 2 Firma B setzt einen Preis von 2,
-Firma C setzt einen Preis von 2. Somit haben Firma A, B und C gemeinsam den niedrigsten Preis gesetzt.
+Firma A setzt einen Preis von 2 Taler Firma B setzt einen Preis von 2 Taler,
+Firma C setzt einen Preis von 2 Taler. Somit haben Firma A, B und C gemeinsam den niedrigsten Preis gesetzt.
 Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 20) und bekommen damit den gleichen Gewinn von 40 Talern.<br><br>
     <table class="table">
         <tr align="center">
@@ -57,10 +57,10 @@ Sie verkaufen alle die gleiche Anzahl an Produkten (jeweils 20) und bekommen dam
     </table>
 <br><br>
 <b>Beispiel 3:</b>
-Firma A setzt einen Preis von 1, Firma B setzt einen Preis von 2, Firma C setzt einen Preis von 3.
+Firma A setzt einen Preis von 1 Taler, Firma B setzt einen Preis von 2 Taler, Firma C setzt einen Preis von 3 Taler.
 Somit hat Firma A den niedrigsten Preis gesetzt.
-Firma A verkauft als einzige das Produkt zu einem Preis von 1 an alle 60 Kunden und bekommt damit einen Gewinn von 60 Talern.
-Firma B und C verkaufen beide nichts und haben einen Gewinn von 0.<br><br>
+Firma A verkauft als einzige das Produkt zu einem Preis von 1 Taler an alle 60 Kunden und bekommt damit einen Gewinn von 60 Talern.
+Firma B und C verkaufen beide nichts und haben einen Gewinn von 0 Taler.<br><br>
     <table class="table">
         <tr align="center">
             <th align="center">  </th>
@@ -85,10 +85,10 @@ Firma B und C verkaufen beide nichts und haben einen Gewinn von 0.<br><br>
     </table>
 <br><br>
 <b>Beispiel 4:</b>
-Firma A setzt einen Preis von 5, Firma B setzt einen Preis von 5, Firma C setzt einen Preis von 5.
+Firma A setzt einen Preis von 5 Taler, Firma B setzt einen Preis von 5 Taler, Firma C setzt einen Preis von 5 Taler.
 Somit haben Firma A, B und C gemeinsam den niedrigsten Preis gesetzt.
 Die Kunden sind jedoch lediglich bereit das Produkt zu einem Preis von 4 Talern zu kaufen.
-Daher verkauft keine Firma ihre Produkte und alle Firmen bekommen einen Gewinn von 0.<br><br>
+Daher verkauft keine Firma ihre Produkte und alle Firmen bekommen einen Gewinn von 0 Taler.<br><br>
     <table class="table">
         <tr align="center">
             <th align="center">  </th>
