--- a/bertrand/templates/bertrand/instructions_procedure.html
+++ b/bertrand/templates/bertrand/instructions_procedure.html
@@ -13,7 +13,7 @@
     </p>
     <p>
       Nach jeder Runde entscheidet ein Zufallsmechanismus, ob eine weitere Runde gespielt wird oder der Durchgang endet.
-      Die Wahrscheinlichkeit, dass eine weitere Periode gespielt wird, liegt bei 95 %.
+      Die Wahrscheinlichkeit, dass eine weitere Runde gespielt wird, liegt bei 95 %.
       Der Durchgang endet also nach jeder Runde mit einer Wahrscheinlichkeit von 5 %.
       Der Durchgang wir so lange fortgesetzt, bis der Zufall das Ende bestimmt.
     </p>
