added/updated tests for the introduction app

--- a/bertrand/templates/bertrand/instructions_main.html
+++ b/bertrand/templates/bertrand/instructions_main.html
@@ -21,7 +21,7 @@
     In jedem Markt verkaufen zwei weitere Firmen das gleiche Produkt wie Sie.
     Diese Firmen werden von zwei anderen Experimentteilnehmerinnen bzw. Experiment-Teilnehmer repräsentiert
     {% endif %}
-    Alle Firmen bieten 60 Einheiten des vergleichbaren Produktes an.
+    Alle Firmen bieten {{Constants.m_consumer}} Einheiten des vergleichbaren Produktes an.
     Bei der Produktion des Produktes entstehen für die Firma keine Kosten.
     Das Spiel hat mehrere Runden, wobei die genau Anzahl durch einen Zufallsmechanismus entschieden wird.
     Sie spielen das Spiel für drei Durchgänge.
