--- a/introduction/templates/introduction/Page.html
+++ b/introduction/templates/introduction/Page.html
@@ -26,7 +26,7 @@
     // Show timeout if we passed the soft audio timeout
     $(function () {
         $('.otree-timer__time-left').on('update.countdown', function (event) {
-            if (event.offset.totalSeconds <= {{Constants.timeout_soft|json}}) {
+            if (event.offset.totalSeconds <= {{Constants.timeout_seconds_left|json}}) {
                 $('.otree-timer').show();
             }
         });
