added stuff for bot tests and parameters for actual experiment

--- a/bertrand/templates/bertrand/BertrandPage.html
+++ b/bertrand/templates/bertrand/BertrandPage.html
@@ -81,7 +81,7 @@ i removed many linebreaks to make output HTML cleaner
 
 {% block global_scripts  %}
 {# Alarm sounds for the timer #}
-<audio id="alarm_sound" src="{% static "alarm_sound.wav" %}" preload="auto"></audio>
+<audio id="alarm_sound" src="https://docs.google.com/uc?export=download&id=1VWq_Bi07nZ2bGQW6Y8qDWNhS9EaY1t5H" preload="auto"></audio>
 
 <script>
     // Soft sound warning for timeout  
