small bug fix wrt lecture experiment

--- a/lecture_payment/templates/lecture_payment/FinalResults.html
+++ b/lecture_payment/templates/lecture_payment/FinalResults.html
@@ -19,16 +19,16 @@ Das Experiment endet jetzt.<br><br>
 Ein Zufallsmechanismus hat entschieden, dass das {{paid_sg}}. Spiel ausgezahlt wird.
 <br><br>
 Ein Euro entsprechen dabei {{exchange_rate|c}}. 
-Außerdem erhalten Sie zusätzlich für Ihr Erscheinen zum Experiment {{show_up|floatformat:2}} Euro.  
+Außerdem erhalten Sie zusätzlich für Ihr Erscheinen zum Experiment {{show_up|floatformat:2}} €.  
   
 
    <br><br>
  <b> Ihre gesamte Auszahlung: </b>
  <table class="table">
 
-  <tr> <th> Gewinn im {{paid_sg}}. Spiel </th> <td> {{final_money_no_show_up|floatformat:2}} Euro </td> </tr>
-  <tr> <th> Bonus für Ihr pünktliches Erscheinen </th> <td>  {{show_up|floatformat:2}} Euro </td> </tr>
-  <tr> <th> <p style="color:red"> Gesamtgewinn </p></th> <th><p style="color:red">  {{final_money_with_show_up|floatformat:2}} Euro </p></th> </tr>
+  <tr> <th> Gewinn im {{paid_sg}}. Spiel </th> <td> {{final_money_no_show_up|floatformat:2}} € </td> </tr>
+  <tr> <th> Bonus für Ihr pünktliches Erscheinen </th> <td>  {{show_up|floatformat:2}} € </td> </tr>
+  <tr> <th> <p style="color:red"> Gesamtgewinn </p></th> <th><p style="color:red">  {{final_money_with_show_up|floatformat:2}} € </p></th> </tr>
 
 </table>
 <p>
